--- a/jsP1.html
+++ b/jsP1.html
@@ -7,11 +7,56 @@
 </head>
 <body>
 
-<button onclick="tester()">Run sleep_in!</button>
-<button onclick="tester()">Run monkey_trouble!</button>
-<button onclick="tester()">Run String_times!</button>
+<button onclick="tester_sleep_in()">Run sleep_in!</button>
+<div id="outputOne"></div>
 
-<div id="output"></div>
+<button onclick="tester_monkey_trouble()">Run monkey_trouble!</button>
+<div id = "outputTwo"></div>
+
+<button onclick="tester_string_times()">Run string_times!</button>
+<div id = "outputThree"></div>
+
+<button onclick="tester_front_times()"> Run front_times!</button>
+<div id = "outputFour"></div>
+
+<button onclick="tester_string_bits()"> Run string_bits!</button>
+<div id = "outputFive"></div>
+
+<button onclick="tester_caughtSpeeding()"> Run caughtSpeeding!</button>
+<div id = "outputSix"></div>
+
+<button onclick="tester_fizzBuzz()"> Run fizzBuzz!</button>
+<div id = "outputSeven"></div>
+
+<button onclick="tester_teaParty()"> Run teaParty!</button>
+<div id = "outputEight"></div>
+
+<button onclick="tester_blackjack()"> Run blackjack!</button>
+<div id = "outputNine"></div>
+
+<button onclick="tester_loneSum()"> Run loneSum!</button>
+<div id = "outputTen"></div>
+
+<button onclick="tester_firstLast6()"> Run firstLast6!</button>
+<div id = "outputEleven"></div>
+
+<button onclick="tester_has_23()"> Run has_23!</button>
+<div id = "outputTwelve"></div>
+
+<button onclick="tester_fix_23()"> Run fix_23!</button>
+<div id = "outputThirteen"></div>
+
+<button onclick="tester_countYZ()"> Run countYZ!</button>
+<div id = "outputFourteen"></div>
+
+<button onclick="tester_endOther()"> Run endOther!</button>
+<div id = "outputFifteen"></div>
+
+<button onclick="tester_starOut()"> Run starOut!</button>
+<div id = "outputSixteen"></div>
+
+<button onclick = "tester_getSandwich()"> Run getSandwich!</button>
+<div id = "outputSeventeen"></div>
 
 </body>
 </html>
