--- a/jsp2.html
+++ b/jsp2.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>JS Problems</title>
-    <script src="project.js"></script>
+    <title>JS Problems 11-20</title>
+    <script src="project11-20.js"></script>
 </head>
 <body>
 
-<button onclick="tester()">Run all my functions!</button>
-<div id="outputOne"></div>
+<button onclick="tester()"> Run all my functions!</button>
+
+<div id = "outputOne"></div>
 
 <div id = "outputTwo"></div>
 
